# 3d-reconstruction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hampus_BA_test.py  main.py
_tests_/: test_ceres.py  test_generate_point_cloud.py  test_init.py  test_open3d_vis.py  test_pose_extraction.py
add_views/: add_views.py
bundle_adjustment/: Jacobian.py  bundle_adjustment.py  python_bundle_adjustment.py
classes/: BookKeeping.py  P.py  PQ_Table.py  Q.py  View.py
cpp_src/: bindings.cpp
eval/: estRT.py  eval.py
ext/: lab3.py
ext/ceres_pybind/: setup.py
init/: calc_ematrix.py  calc_fmatrix_gs.py  calc_fmatrix_ransac.py  extract_pose.py  get_correspondences.py  setup_views.py  triangulate_points.py
loaders/: image_loader.py
visualization/: generate_point_cloud.py  sync_cam.ply  sync_points.ply  visualization.py
